update initial topo

--- a/Test/run_pyReef.ipynb
+++ b/Test/run_pyReef.ipynb
@@ -75,7 +75,7 @@
    "outputs": [],
    "source": [
     "reef.mPlot.paramInit(z=reef.pyGrid.regZ, sl=reef.force.sealevel)\n",
-    "#reef.mPlot.bathymetry(color=cmocean.cm.delta, fsize=(7.5,5), fname='bathy.png', dpi=300)\n",
+    "reef.mPlot.bathymetry(color=cmocean.cm.delta, fsize=(7.5,5), fname='bathy.png', dpi=300)\n",
     "#reef.mPlot.slope(color=cmocean.cm.matter, fsize=(7.5,5), fname='slope.png', dpi=300)"
    ]
   },
@@ -131,7 +131,7 @@
     "vmax = 0.5\n",
     "rr = reef.hydro.dh[0]\n",
     "print rr.min(),rr.max()\n",
-    "reef.mPlot.morphochange(rr, min=vmin, max=vmax, gauss=0., \n",
+    "reef.mPlot.morphochange(rr, min=vmin, max=vmax, gauss=1, \n",
     "                      color=cmocean.cm.balance, fsize=(15,10), \n",
     "                      fname='deposition.png', dpi=300)"
    ]
