parallelisation of sediment direction

--- a/Test/run_pyReef.ipynb
+++ b/Test/run_pyReef.ipynb
@@ -121,8 +121,8 @@
     "rr = reef.hydro.dh[0]\n",
     "print rr.min(),rr.max()\n",
     "reef.mPlot.morphochange(rr, min=vmin, max=vmax, gauss=0, \n",
-    "                      color=cmocean.cm.curl, fsize=(15,10), \n",
-    "                      fname='deposition_suspload.png', dpi=300)"
+    "                      color=cmocean.cm.curl, fsize=(7.5,5), \n",
+    "                      fname='deposition.png', dpi=300)"
    ]
   },
   {
@@ -188,7 +188,24 @@
    "outputs": [],
    "source": [
     "# Run model\n",
-    "reef.run_to_time(1.)"
+    "reef.run_to_time(0.5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "vmin = -0.5\n",
+    "vmax = 0.5\n",
+    "rr = reef.hydro.dh[0]\n",
+    "print rr.min(),rr.max()\n",
+    "reef.mPlot.morphochange(rr, min=vmin, max=vmax, gauss=0, \n",
+    "                      color=cmocean.cm.curl, fsize=(7.5,5), \n",
+    "                      fname='deposition_suspload.png', dpi=300)"
    ]
   },
   {
@@ -205,17 +222,8 @@
     "\n",
     "U = reef.force.wavU[0].T\n",
     "V = reef.force.wavV[0].T\n",
-    "reef.mPlot.bottomCurrents(U, V, gauss=3., dens=1, color=cmocean.cm.deep, fsize=(7.5,5), fname='currents.png', dpi=300)"
+    "reef.mPlot.bottomCurrents(U, V, gauss=1., dens=3, color=cmocean.cm.deep, fsize=(7.5,5), fname='currents.png', dpi=300)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
