--- a/Test/run_pyReef.ipynb
+++ b/Test/run_pyReef.ipynb
@@ -61,17 +61,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "reef.pyStrat.stratTH.shape,reef.pyGrid.regZ.shape"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -110,7 +99,7 @@
    "outputs": [],
    "source": [
     "# Run model\n",
-    "reef.run_to_time(10)"
+    "reef.run_to_time(1)"
    ]
   },
   {
@@ -265,7 +254,7 @@
    },
    "outputs": [],
    "source": [
-    "!mpiexec -n 2 python mpi_example.py 0.5"
+    "!mpiexec -n 2 python mpi_example.py 1."
    ]
   },
   {
